# spirq-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cbindgen.toml  comp.spv  frag.hspv  spirq.h  x.comp  x.ipynb  x.rdsl
.github/workflows/: rust.yml
assets/: gallery.frag  gallery.frag.json  gallery.frag.spv  gallery.frag.spv.json  gallery.frag.spvasm  issue138.frag.spv  issue138.json  mesh-shader.spv  mesh-shader.spv.json  moon.spv  moon.spv.json  spirv-spec.frag  spirv-spec.frag.json  spirv-spec.frag.spv  spirv-spec.frag.spv.json
assets/effects/hlsl/: sampler-state.frag.hlsl  sampler-state.frag.hlsl.spv
assets/effects/ray-tracing/: closest-hit.glsl  closest-hit.spv  miss.glsl  miss.spv  ray-generation.glsl  ray-generation.spv
assets/effects/spirv-spec/: referential.frag  referential.frag.spv
assets/effects/uniform-pbr/: fx.json  uniform-pbr.frag  uniform-pbr.frag.spv  uniform-pbr.vert  uniform-pbr.vert.spv
examples/benchmark/: main.rs
examples/gallery/: main.rs
examples/inspect/: main.rs
examples/pipeline/: main.rs
examples/query/: main.rs
examples/ray-tracing/: main.rs
examples/sampler-state/: main.rs
examples/spirv-spec/: main.rs
examples/walk/: main.rs
scripts/: Update-ExampleLogs.ps1  Update-SpirvHeader.ps1
shader-reflect/: Cargo.toml  README.md
shader-reflect/src/: main.rs
spirq/: Cargo.toml  README.md
spirq-as/: Cargo.toml  README.md  generate_enum_from_str.py  generate_op_from_str.py  generate_op_has_result_id.py  generate_op_has_result_type_id.py  generate_operand_enum_type.py
spirq-as/src/: lib.rs  main.rs  tokenizer.rs
spirq-core/: Cargo.toml  README.md
spirq-core/src/: annotation.rs  constant.rs  evaluator.rs  func.rs  lib.rs  locator.rs  var.rs
spirq-core/src/parse/: bin.rs  instr.rs  mod.rs
spirq-core/src/ty/: mod.rs  reg.rs  walk.rs
spirq-dis/: Cargo.toml  README.md
spirq-dis/scripts/: generate_code.py
spirq-dis/src/: lib.rs  main.rs
spirq-eval/: Cargo.toml
spirq-eval/src/: evaluator.rs  lib.rs
spirq-interface/: Cargo.toml
spirq-interface/src/: constant.rs  func.rs  lib.rs  locator.rs  var.rs
spirq-parse/: Cargo.toml
spirq-parse/src/: bin.rs  instr.rs  lib.rs
spirq-reflect/: Cargo.toml  README.md
spirq-reflect/src/: main.rs
spirq-run/: Cargo.toml  README.md
spirq-run/src/: main.rs
spirq-spvasm/: Cargo.toml  README.md
spirq-spvasm/scripts/: generate_decorate_parameter_enum_type.py  generate_enum_from_str.py  generate_enum_to_str.py  generate_op_from_str.py  generate_op_has_result_id.py  generate_op_has_result_type_id.py  generate_op_to_str.py  generate_operand_enum_type.py  generate_print_operand.py  generate_read_operand.py
spirq-spvasm/src/: lib.rs  test.rs
spirq-spvasm/src/asm/: assembler.rs  mod.rs  tokenizer.rs  ty_reg.rs
spirq-spvasm/src/dis/: auto_name.rs  disassembler.rs  mod.rs  test.rs  utils.rs
spirq-sys/: Cargo.toml
spirq-sys/src/: lib.rs
spirq-types/: Cargo.toml
spirq-types/src/: lib.rs  reg.rs  ty.rs  walk.rs
spirq/examples/inspect/: main.rs
spirq/examples/walk/: main.rs
spirq/src/: analysis.rs  consts.rs  entry_point.rs  error.rs  inspect.rs  instr.rs  lib.rs  parse.rs  reflect.rs  reflect_cfg.rs  tests.rs  ty.rs  walk.rs
spq-as/: Cargo.toml  README.md
spq-as/src/: main.rs
spq-core/: Cargo.toml  README.md
spq-core/src/: annotation.rs  func.rs
spq-core/src/parse/: bin.rs  mod.rs
spq-core/src/ty/: mod.rs
spq-dis/: Cargo.toml  README.md
spq-dis/src/: main.rs
spq-spvasm/: Cargo.toml  README.md
spq-spvasm/scripts/: generate_decorate_parameter_enum_type.py  generate_enum_from_str.py  generate_enum_to_str.py  generate_op_from_str.py  generate_op_has_result_id.py  generate_op_has_result_type_id.py  generate_op_to_str.py  generate_operand_enum_type.py  generate_print_operand.py
spq-spvasm/src/: lib.rs  test.rs
spq-spvasm/src/asm/: assembler.rs  mod.rs
spq-spvasm/src/dis/: auto_name.rs  disassembler.rs  test.rs
src/: consts.rs  error.rs  inspect.rs  instr.rs  lib.rs  parse.rs  reflect.rs  sym.rs  tests.rs  ty.rs  walk.rs
