[package]
name = "spirq"
version = "0.2.1"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Light weight SPIR-V query utility for graphics."
repository = "https://github.com/PENGUINLIONG/spirq-rs"
homepage = "https://github.com/PENGUINLIONG/spirq-rs"
documentation = "https://docs.rs/spirq"
maintenance = { status = "experimental" }
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv_headers = "1.3.4"
num-traits = "0.2.11"
num-derive = "0.3.0"

[dev-dependencies]
log = "0.4.8"
env_logger = "0.7.1"
bytes = "0.4.12"
byteorder = "1.3.2"

[[example]]
name = "query"
path = "examples/query/main.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline/main.rs"
