[package]
name = "spirq"
version = "0.5.1"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Light weight SPIR-V query utility for graphics."
repository = "https://github.com/PENGUINLIONG/spirq-rs"
homepage = "https://github.com/PENGUINLIONG/spirq-rs"
documentation = "https://docs.rs/spirq"
categories = ["graphics"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv_headers = "1.5.0"
num-traits = "0.2.12"
num-derive = "0.3.1"
fnv = "1.0.7"

clap = { version = "4.0.6", features = ["derive"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
bytes = "0.5.6"
byteorder = "1.3.4"
inline-spirv = "0.1.2"
