[package]
name = "shader-reflect"
version = "0.2.10"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "SPIR-V/GLSL/HLSL shader interface reflection to JSON. (CLI)"
repository = "https://github.com/PENGUINLIONG/spirq-rs"
homepage = "https://github.com/PENGUINLIONG/spirq-rs"
documentation = "https://docs.rs/spirq"
categories = ["graphics"]
readme = "README.md"
keywords = ["spirv", "vulkan", "opengl", "glsl", "hlsl"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirq = { version = "1.2", path = "../spirq" }
clap = { version = "4.0.6", features = ["derive"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
shaderc = "0.7"
