[package]
name = "spirq-as"
version = "0.2.3"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "SPIR-V assembler"
repository = "https://github.com/PENGUINLIONG/spirq-rs"
homepage = "https://github.com/PENGUINLIONG/spirq-rs"
documentation = "https://docs.rs/spirq-as"
categories = ["graphics"]
readme = "README.md"
keywords = ["spirv"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
spirq-core = { version = "1.0.0", path = "../spirq-core" }
