[package]
name = "spirq-core"
version = "1.0.3"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "SPIR-Q core feature implementation, a light weight SPIR-V query utility for graphics."
repository = "https://github.com/PENGUINLIONG/spirq-rs"
homepage = "https://github.com/PENGUINLIONG/spirq-rs"
documentation = "https://docs.rs/spirq-core"
categories = ["graphics"]
readme = "README.md"
keywords = ["spirv", "vulkan", "opengl", "opencl"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
spirv = ">=0.3"
anyhow = "1.0"
ordered-float = "3.4"
num-traits = "0.2"
half = { version = "2.3", features = ["num-traits"] }
bytemuck = "1.14"
