[package]
name = "spirq-dis"
version = "0.2.3"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "SPIR-V disassembler"
repository = "https://github.com/PENGUINLIONG/spirq-rs"
homepage = "https://github.com/PENGUINLIONG/spirq-rs"
documentation = "https://docs.rs/spirq"
categories = ["graphics"]
readme = "README.md"
keywords = ["spirv", "vulkan", "opengl", "glsl", "hlsl"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirq-core = { version = "1.0.0", path = "../spirq-core" }
