[package]
name = "spirq-interface"
version = "0.6.4"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Pipeline resource interface for SPIR-Q, a light weight SPIR-V query utility for graphics."
repository = "https://github.com/PENGUINLIONG/spirq-rs"
homepage = "https://github.com/PENGUINLIONG/spirq-rs"
documentation = "https://docs.rs/spirq-error"
categories = ["graphics"]
readme = "README.md"
keywords = ["spirv", "vulkan", "opengl", "opencl"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv = "0.2"
anyhow = "1.0"
spirq-types = { version = "0.6.4", path = "../spirq-types" }
ordered-float = "3.4"
