[package]
name = "spq-dis"
version = "0.1.4"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "SPIR-V disassembler"
repository = "https://github.com/PENGUINLIONG/spq-rs"
homepage = "https://github.com/PENGUINLIONG/spq-rs"
documentation = "https://docs.rs/spq-dis"
categories = ["graphics"]
readme = "README.md"
keywords = ["spirv"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
spq-spvasm = { version = "0.1.4", path = "../spq-spvasm" }
clap = { version = "4.0.6", features = ["derive"] }
