[package]
name = "spq-spvasm"
version = "0.1.4"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Tools for SPIR-V Assembly interaction."
repository = "https://github.com/PENGUINLIONG/spq-rs"
homepage = "https://github.com/PENGUINLIONG/spq-rs"
documentation = "https://docs.rs/spq-spvasm"
categories = ["graphics"]
readme = "README.md"
keywords = ["spirv", "spvasm"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num-traits = "0.2"
spq-core = { version = "1.0.4", path = "../spq-core" }
spirq = { version = "1.1.1", path = "../spirq"}
half = { version =  "2.3", features = ["num-traits"] }

[dev-dependencies]
pretty_assertions = "1.4"
